--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -1,9 +1,8 @@
----
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: webdav-csi-sa
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -42,7 +41,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: webdav-csi-sa
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: webdav-csi-cr
